[v1] Create Became an Author Screen and Integrated with Bank
