# docs/swagger.json
@@ -19,7 +19,7 @@
     "paths": {
         "/auth/login": {
             "post": {
-                "description": "Mengotentikasi pengguna dengan email dan password, lalu memberikan JWT.",
+                "description": "Mengotentikasi pengguna dengan username dan password, lalu memberikan JWT.",
                 "consumes": [
                     "application/json"
                 ],
@@ -32,12 +32,12 @@
                 "summary": "Login pengguna",
                 "parameters": [
                     {
-                        "description": "Kredensial Login",
+                        "description": "Kredensial Login dengan Username",
                         "name": "login",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/controller.LoginRequest"
+                            "$ref": "#/definitions/controllers.LoginRequest"
                         }
                     }
                 ],
@@ -45,25 +45,25 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/controller.LoginResponse"
+                            "$ref": "#/definitions/controllers.LoginSuccessResponse"
                         }
                     },
                     "400": {
                         "description": "Input tidak valid",
                         "schema": {
-                            "$ref": "#/definitions/controller.ErrorResponse"
+                            "$ref": "#/definitions/controllers.ErrorResponse"
                         }
                     },
                     "401": {
                         "description": "Kredensial tidak valid",
                         "schema": {
-                            "$ref": "#/definitions/controller.ErrorResponse"
+                            "$ref": "#/definitions/controllers.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Error internal server",
                         "schema": {
-                            "$ref": "#/definitions/controller.ErrorResponse"
+                            "$ref": "#/definitions/controllers.ErrorResponse"
                         }
                     }
                 }
@@ -71,7 +71,7 @@
         },
         "/auth/register": {
             "post": {
-                "description": "Membuat akun pengguna baru dengan email dan password.",
+                "description": "Membuat akun pengguna baru dengan email, username, dan password.",
                 "consumes": [
                     "application/json"
                 ],
@@ -103,19 +103,51 @@
                     "400": {
                         "description": "Input tidak valid",
                         "schema": {
-                            "$ref": "#/definitions/controller.ErrorResponse"
+                            "$ref": "#/definitions/controllers.ErrorResponse"
                         }
                     },
                     "409": {
-                        "description": "Email sudah terdaftar",
+                        "description": "Email atau Username sudah terdaftar",
                         "schema": {
-                            "$ref": "#/definitions/controller.ErrorResponse"
+                            "$ref": "#/definitions/controllers.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Error internal server",
                         "schema": {
-                            "$ref": "#/definitions/controller.ErrorResponse"
+                            "$ref": "#/definitions/controllers.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/bank/get": {
+            "get": {
+                "description": "Mengambil daftar semua bank yang aktif, diurutkan berdasarkan nama.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Bank"
+                ],
+                "summary": "Daftar Bank",
+                "responses": {
+                    "200": {
+                        "description": "Daftar bank yang berhasil diambil",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/controllers.BankResponse"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Terjadi kesalahan internal pada server",
+                        "schema": {
+                            "$ref": "#/definitions/fiber.Map"
                         }
                     }
                 }
@@ -123,16 +155,32 @@
         }
     },
     "definitions": {
-        "controller.ErrorResponse": {
+        "controllers.BankResponse": {
             "type": "object",
             "properties": {
-                "error": {
-                    "type": "string",
-                    "example": "Invalid credentials"
+                "bank_code": {
+                    "type": "string"
+                },
+                "bank_id": {
+                    "type": "integer"
+                },
+                "bank_name": {
+                    "type": "string"
                 }
             }
         },
-        "controller.LoginRequest": {
+        "controllers.ErrorResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "controllers.LoginRequest": {
             "type": "object",
             "properties": {
                 "password": {
@@ -145,24 +193,32 @@
                 }
             }
         },
-        "controller.LoginResponse": {
+        "controllers.LoginSuccessResponse": {
             "type": "object",
             "properties": {
-                "message": {
-                    "type": "string",
-                    "example": "Login successful"
-                },
                 "token": {
-                    "type": "string",
-                    "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
+                    "type": "string"
+                },
+                "user": {
+                    "$ref": "#/definitions/tables.User"
                 }
             }
+        },
+        "fiber.Map": {
+            "type": "object",
+            "additionalProperties": true
         },
         "tables.User": {
             "type": "object",
             "properties": {
+                "account_number": {
+                    "type": "string"
+                },
                 "avatar_url": {
                     "type": "string"
+                },
+                "bank_id": {
+                    "type": "integer"
                 },
                 "create_datetime": {
                     "type": "string"
@@ -170,7 +226,13 @@
                 "email": {
                     "type": "string"
                 },
+                "flg_author": {
+                    "type": "string"
+                },
                 "full_name": {
+                    "type": "string"
+                },
+                "instagram": {
                     "type": "string"
                 },
                 "is_email_verified": {
@@ -180,6 +242,9 @@
                     "type": "string"
                 },
                 "password": {
+                    "type": "string"
+                },
+                "phone": {
                     "type": "string"
                 },
                 "update_datetime": {
